--- a/s&s/products.html
+++ b/s&s/products.html
@@ -180,53 +180,28 @@
     />
   </head>
   <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand text-white" href="#">
-        <span style="font-size: 30px; margin-right: 10px">Step in Style</span>
-        <img
-          src="assets/logo.png"
-          alt="Logo"
-          style="width: 70px; height: 40px"
-        />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img
-                src="assets/cart.png"
-                alt="Cart"
-                style="width: 50px; height: 50px"
-              />
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div id="navbar"></div>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const navbarContainer = document.getElementById("navbar");
+
+        fetch("navbar.html")
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error(
+                "Network response was not ok " + response.statusText
+              );
+            }
+            return response.text();
+          })
+          .then((data) => {
+            navbarContainer.innerHTML = data;
+          })
+          .catch((error) => {
+            console.error("Error fetching the navbar:", error);
+          });
+      });
+    </script>
 
     <!-- Main Content -->
     <div class="content-container">
@@ -339,11 +314,31 @@
           </div>
         </div>
       </div>
+
+      <!-- Navigation Buttons -->
+      <div class="row justify-content-between mt-4">
+        <div class="col-auto">
+          <img
+            id="back-btn"
+            src="assets/1a.png"
+            alt="Back"
+            style="cursor: pointer; width: 140px; height: 140px"
+          />
+        </div>
+        <div class="col-auto">
+          <img
+            id="next-btn"
+            src="assets/2a.png"
+            alt="Next"
+            style="cursor: pointer; width: 140px; height: 140px"
+          />
+        </div>
+      </div>
     </div>
 
     <script>
       const urlParams = new URLSearchParams(window.location.search);
-      const collectionId = parseInt(urlParams.get("collection"), 10); // Get and convert to number
+      let collectionId = parseInt(urlParams.get("collection"), 10) || 1; // Default to collection 1 if not set
 
       const collections = {
         1: [
@@ -410,17 +405,34 @@
 
       const cards = document.querySelectorAll(".col-md-4");
 
-      if (collections[collectionId]) {
-        collections[collectionId].forEach((item, index) => {
-          if (cards[index]) {
-            const card = cards[index];
-            card.querySelector("img").src = `assets/shoes/${item.image}`;
-            card.querySelector(".card-name").textContent = item.name;
-            card.querySelector(".card-desc").textContent = item.description;
-            card.querySelector(".card-text").textContent = item.price;
-          }
-        });
+      function updateCards(collectionId) {
+        if (collections[collectionId]) {
+          collections[collectionId].forEach((item, index) => {
+            if (cards[index]) {
+              const card = cards[index];
+              card.querySelector("img").src = `assets/shoes/${item.image}`;
+              card.querySelector(".card-name").textContent = item.name;
+              card.querySelector(".card-desc").textContent = item.description;
+              card.querySelector(".card-text").textContent = item.price;
+            }
+          });
+        }
       }
+
+      document.getElementById("back-btn").addEventListener("click", () => {
+        collectionId =
+          collectionId > 1 ? collectionId - 1 : Object.keys(collections).length;
+        updateCards(collectionId);
+      });
+
+      document.getElementById("next-btn").addEventListener("click", () => {
+        collectionId =
+          collectionId < Object.keys(collections).length ? collectionId + 1 : 1;
+        updateCards(collectionId);
+      });
+
+      // Initial render
+      updateCards(collectionId);
     </script>
 
     <!-- Bootstrap JavaScript -->
